# public-display-macro-example

./: Cargo.toml  readme.md
examples/: error.rs  expanded_expect.rs  simple_use.rs
public_display_core/: Cargo.toml
public_display_core/src/: lib.rs
public_display_derive/: Cargo.toml
public_display_derive/src/: lib.rs
src/: lib.rs
