[package]
name = "public_display"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
public_display_derive = { path = "public_display_derive"}
public_display_core = { path = "public_display_core"}